--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.1.0
   smooth_page_indicator: ^1.2.1
+  shared_preferences: ^2.5.3
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
